fix footer spacing on webconf

--- a/assets/static/_css/indypy/indypy.css
+++ b/assets/static/_css/indypy/indypy.css
@@ -11,6 +11,9 @@ body {
 #main {
     padding-bottom: 213px; /* height of footer */
 }
+.site-webconf #main {
+    padding-bottom: 218px; /* height of footer */
+}
 footer {
     position: absolute;
     left: 0;
